--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
     docker:
       - image: cimg/python:3.9
     resource_class: small
+    working_directory: ~/app
     steps:
       - run: |
           sudo apt-get update
