--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,8 @@ jobs:
       - run:
           name: unzip
           command: |
-            unzip foo/bar.zip
+            cd foo
+            unzip bar.zip
       - run: |
           ls -lh  ~/project/foo/bar
       - run: |
