--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ executors:
   base:
     docker:
       - image: cimg/base:current
-    resource_class: medium
+    resource_class: small
 
 jobs:
   before:
