--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ executors:
       - image: cimg/base:current
     resource_class: medium
 
+# trying this again!
 jobs:
   before:
     executor: base
